corpus/c/preprocessor_directive/case-01/snapshots/gcc13_14/single_sink_structured/subject_blocks_v1/render.default.txt
error: [syntax] preprocessor directive error @ src/main.c:1:2
help: inspect the failing preprocessor directive or disabled branch expression in the preserved raw diagnostics
why : #error macro guard missing
| src/main.c:1:2
| #error macro guard missing
|  ^
macro: preserved
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output